--- a/PayrollReport/MainUI/Properties/Resources.resx
+++ b/PayrollReport/MainUI/Properties/Resources.resx
@@ -118,16 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="search-folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\search-folder.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tongjiData2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tongjiData.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="export (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\export (1).ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tongjiData" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tongjiData.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="import (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\import (1).ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="search-folder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search-folder.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tongjiData1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tongjiData1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="103" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\103.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="e01fb2a74b4e503f24dbd539f088962d" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\e01fb2a74b4e503f24dbd539f088962d.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
